force-app/main/default/objects/Account/fields/Account_Linked_from_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Account_Linked_from_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Linked from Legacy</label>
    <type>Checkbox</type>
</CustomField>