force-app/main/default/objects/Account/fields/Allow_Local_Authority_Access__c.field-meta.xml
<CustomField>
    <fullName>Allow_Local_Authority_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Local Authority Access</label>
    <type>Checkbox</type>
</CustomField>