force-app/main/default/objects/Account/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>