force-app/main/default/objects/Account/fields/DomesticNotificationsMailbox__c.field-meta.xml
<CustomField>
    <fullName>DomesticNotificationsMailbox__c</fullName>
    <label>Domestic Notifications Mailbox</label>
    <type>Email</type>
</CustomField>