force-app/main/default/objects/Account/fields/Imported_From_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Imported_From_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imported From Legacy System</label>
    <type>Checkbox</type>
</CustomField>