force-app/main/default/objects/Account/fields/LA_User_Type__c.field-meta.xml
<CustomField>
    <fullName>LA_User_Type__c</fullName>
    <description>To decide if the user is belongs to a MEES (Compliance) or PRSE site</description>
    <inlineHelpText>To decide if the user is belongs to a MEES (Compliance) or PRSE site</inlineHelpText>
    <label>LA User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LA_User_Type</valueSetName>
    </valueSet>
</CustomField>