force-app/main/default/objects/Account/fields/Landlord_Type__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Type__c</fullName>
    <label>Landlord Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Organisation</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>