force-app/main/default/objects/Account/fields/Legacy_Username__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Username__c</fullName>
    <description>The username of the landlord or agent from the legacy system</description>
    <label>Legacy Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>