force-app/main/default/objects/Account/fields/Local_Custodian_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Custodian_Code__c</fullName>
    <label>Local Custodian Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LocalCustodianCodes</valueSetName>
    </valueSet>
</CustomField>