force-app/main/default/objects/Account/fields/NonDomesticNotificationsMailbox__c.field-meta.xml
<CustomField>
    <fullName>NonDomesticNotificationsMailbox__c</fullName>
    <label>Non-domestic Notifications Mailbox</label>
    <type>Email</type>
</CustomField>