force-app/main/default/objects/Account/recordTypes/Local_Authority.recordType-meta.xml
<RecordType>
    <fullName>Local_Authority</fullName>
    <active>true</active>
    <label>Local Authority</label>
</RecordType>